# mtc_pour_trixi

./: CMakeLists.txt  package.xml
cadb/: left_arm_2018-05-31T21:31:50.409530.ompldb  manifest
launch/: tams_pr2_demo_prerequisites.launch  tams_pr2_move_group.launch
src/: grasp_bottle.cpp  right_hand_pour.cpp  trixi_pick_pour_place.cpp  utils.hpp
